# MML

./: AIMT15-test.py  AIMT15-train.py  EIMT16-test.py  EIMT16-train.py  README.md  affutil.py  eval.py  run.md
liblinear-multicore-2.11-2/: Makefile  Makefile-back  liblinear.so.3
liblinear-multicore-2.11-2/python/: liblinear.py
list/: MEDIAEVAL16-Global_prediction.txt
tools/MKT/: BinFile.cpp  BinFile.h  CMakeLists.txt  ObjList.h  OpticalFlow.h  README  TBC.cpp  TBC.h  Track.cpp  Track.h  common.h  feature.cpp  feature.h  main.cpp  tinfo.cpp  tinfo.h  vfc.cpp
